--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<title>Wasmer</title>
 	<meta name="mobile-web-app-capable" content="yes" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimal-ui" />
 
 	<meta name="mobile-web-app-capable" content="yes" />
 	<meta name="application-name" content="Wasmer" />
@@ -29,7 +29,17 @@
 
 <body>
 	<div id="root">
-		Please, turn on JavaScript
+		<div style="
+		min-height: 100vh;
+		min-width: 100vw;
+		display: flex;
+		justify-content:center;
+		align-items: center;
+		text-align: center;
+		font-size: 2rem;
+		">
+			Please, turn on JavaScript
+		</div>
 	</div>
 </body>
 
