--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,15 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Pomidor</title>
+	<title>Pomidorka</title>
 	<meta name="mobile-web-app-capable" content="yes" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimal-ui" />
 
 	<meta name="mobile-web-app-capable" content="yes" />
-	<meta name="application-name" content="Pomidor" />
+	<meta name="application-name" content="Pomidorka" />
 
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="apple-mobile-web-app-title" content="Pomidor" />
+	<meta name="apple-mobile-web-app-title" content="Pomidorka" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 	<link rel="apple-touch-icon" sizes="180x180" href="./icon/apple-touch-icon.png" />
 	<link rel="icon" type="image/png" sizes="32x32" href="./icon/favicon-32x32.png" />
