--- a/src/index.html
+++ b/src/index.html
@@ -28,19 +28,10 @@
 </head>
 
 <body>
-	<div id="root">
-		<div style="
-		min-height: 100vh;
-		min-width: 100vw;
-		display: flex;
-		justify-content:center;
-		align-items: center;
-		text-align: center;
-		font-size: 2rem;
-		">
-			Please, turn on JavaScript
-		</div>
-	</div>
+	<noscript>
+		You need to enable JavaScript to run this app.
+	</noscript>
+	<div id="root"></div>
 </body>
 
 </html>
